<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update"
    android:background="@drawable/back123">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="305dp"
        android:layout_height="63dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt18"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="ID"
        android:inputType="number"
        android:text="@string/hintID"
        android:textColorHighlight="#E3D561"
        android:textColorHint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:text="@string/hiname"
        android:textColorHighlight="#E3D561"
        android:textColorHint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:text="@string/himail"
        android:textColorHighlight="#E3D561"
        android:textColorHint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        android:text="@string/hintphone"
        android:textColorHighlight="#E3D561"
        android:textColorHint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/hipassword"
        android:textColorHighlight="#E3D561"
        android:textColorHint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <Button
        android:id="@+id/button10"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:background="#3F4042"
        android:text="@string/btn20"
        android:textColor="#FBF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <Button
        android:id="@+id/button15"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:background="#3F4042"
        android:text="@string/btn21"
        android:textColor="#FBF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />
</androidx.constraintlayout.widget.ConstraintLayout>