<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back123"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="49dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt14"
        android:textColor="#131212"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        android:text="@string/hintphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        android:textColorHighlight="#E3D561"
        android:textColorHint="#2196F3"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/hintpw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        android:textColorHighlight="#E3D561"
        android:textColorHint="#2196F3"/>

    <Button
        android:id="@+id/button"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:background="#3F4042"
        android:text="LogIn"
        android:textColor="#FBF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/button2"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:background="#3F4042"
        android:text="Register"
        android:textColor="#FBF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />
</androidx.constraintlayout.widget.ConstraintLayout>